# polyam.eu

./: README.md  index.html
.do/: app.yaml
.github/workflows/: shuttle.yaml
polly/: .gitignore  Cargo.toml  Pipfile  Shuttle.toml  polly.py  polly.toml  sqlx-data.json
polly/.sqlx/: query-239c133c7421fe1995e9657b69350faa577d254bb83947e8c8bb8344e615432f.json  query-49e86af35937166808c374f20660e955e6a32fe80ab759573f376cdd98ab723c.json  query-89dcffa1ccd83048e2ed546efb01f754efa7a96c79b695b43eedd12a9591c94d.json  query-931338f01b341c6c577db443781d02f4b35bd088a422a81e6400088dbce9273b.json  query-bd0d3823bf18b9f2a4f41763a38eef4f1acc262667ca68f093387422cea1319c.json  query-c77a9bedb22272c73104b40c0a61e04ec0efe506a1313096f09a372b2c45078c.json  query-eb7cdfe02bfbfe557b86e175407e733df23cdafd063d0fb6e877b41af1993ef4.json
polly/cogs/: __init__.py  bubblewrap.py  connections.py  users.py
polly/examples/: polly.rs
polly/migrations/: 20230323104834_create_onboarding_welcome_messages.sql  20230323110742_create_onboarding_intro_messages.sql
polly/src/: auto_delete.rs  commands.rs  config.rs  context.rs  cracker.rs  error.rs  error_reporting.rs  lib.rs  main.rs  onboarding.rs  task.rs
polly/src/commands/: bubblewrap.rs  mod.rs
polly/src/onboarding/: cache.rs  intro.rs  messages.rs  mod.rs  old_members.rs  persist.rs  quarantine.rs
polly/static/: polly.toml
polly/tests/cogs/: test_bubblewrap.py
polybot/: polybot.py
static/: coc.html  style.css
terraform/: channels_server.tf  invite.tf  main.tf  messages_rules.tf  permissions.tf  roles_core.tf  server.tf
www/: index.html
