[package]
name = "polly"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = "0.4"
http = "0.2"
iso8601 = { version = "0.6", features = ["serde"] }
once_cell = "1"
poise = "0.5"
rand = "0.8"
serde = "1"
serde_derive = "1"
serenity = { version = "0.11", default-features = false, features = [
    "cache",
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-poise = "0.30"
shuttle-runtime = "0.30"
shuttle-secrets = "0.30"
shuttle-shared-db = { version = "0.30", features = ["postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
